--- a/assents/img/style.css
+++ b/assents/img/style.css
@@ -21,7 +21,7 @@
     padding: 15px;
 }
 
-.cv .lado-esquerdo .foto
+.lado-esquerdo .foto
 {
     width: 150px;
     border-radius: 100%;
@@ -59,7 +59,7 @@
     text-align: justify;
 }
 
-.cv .lado-direito
+.lado-direito
 {
     display: flex;
     flex-direction: column;
@@ -79,4 +79,20 @@
     font-size: 25px;
     padding: 10px;
     margin-top: 20px;
+}
+.xp
+{
+    margin-top: 5px;
+
+}
+
+.cursos
+{
+    margin-top: 100px;
+
+}
+
+.formacao
+{
+    margin-top: 100px;
 }
