--- a/assents/img/style.css
+++ b/assents/img/style.css
@@ -26,7 +26,7 @@
     border: 0.5px solid black;
 }
 
-.lado-esquerdo .foto
+.foto
 {
     width: 150px;
     border-radius: 100%;
@@ -74,6 +74,28 @@
   color: rgb(74, 83, 91);
   margin-left: -12px;
 }
+
+.email
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.tel
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.endereco
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 
 .lado-direito
 {
