--- a/assents/img/style.css
+++ b/assents/img/style.css
@@ -19,7 +19,7 @@
 {
     display: flex;
     flex-wrap: wrap;
-    max-width: 250px;
+    max-width: 270px;
     background: rgb(158, 216, 241);
     justify-content: center;
     padding: 15px;
@@ -28,7 +28,8 @@
 
 .foto
 {
-    width: 150px;
+    width: 200px;
+    height: 200px;
     border-radius: 100%;
     border: 0.5px solid black;
     
