--- a/assents/css/style.css
+++ b/assents/css/style.css
@@ -107,6 +107,7 @@
     background: rgb(246, 246, 250);
     padding: 15px;
     border: 0.5px solid black;
+    border-left: none;
 }
 
 .lado-direito ul
@@ -154,4 +155,44 @@
 .margin-conainer
 {
     margin-left: 20px;
+}
+
+.icon
+{
+  height: 50px;
+  margin-top: 10px;
+  margin-right: 30px;
+}
+
+.barra
+{
+    width: 100px;
+    height: 7px;
+    border-radius: 10px;
+    background-color: rgb(188, 187, 187);
+    margin-left: -30px;
+}
+
+.progresso
+{
+    height: 100%;
+    background-color: rgb(38, 176, 235);
+    border-radius: 10px;
+    width: 30px;
+}
+
+.habilidades
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 18px;
+}
+
+.hard-skills
+{
+    display: flex;
+    flex-direction: column;
+    align-items:flex-end;
+    justify-content:flex-start;
 }
